src/ui/lidarr_ui/blocklist/snapshots/managarr__ui__lidarr_ui__blocklist__blocklist_ui_tests__tests__snapshot_tests__blocklist_tab_Blocklist.snap
---
source: src/ui/lidarr_ui/blocklist/blocklist_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Artist Name ▼                                Source Title                                                       Quality               Date                        
=> Alex                                         Alex - Something                                                   Lossless              2023-05-20 21:29:16 UTC
